# ai-readiness-assessment

./: LICENSE  environment.yml  pyproject.toml  replit.md  requirements.txt  run_app.py  sendgrid_sender.py  streamlit_app (6).py  streamlit_app.py  streamlit_app_CLEANED.py  vercel.json
attached_assets/: AI-Readiness Mock-Up 1.0_1763929945256.pptx  AI_Readiness_Questionnaire_FINAL_1764487284561.docx  FORMULA_REFERENCE_1764496182722.txt  PACKAGE_SUMMARY_1764496182712.md
data/: benchmarks.py  dimensions.py
db/: models.py  operations.py
utils/: ai_chat.py  gmail_sender.py  html_report_generator.py  pdf_generator.py  recommendations.py  scoring.py  test_pdf.py
